--- a/chrome/skin/mac/slimChrome.css
+++ b/chrome/skin/mac/slimChrome.css
@@ -203,9 +203,10 @@ window:not([chromehidden~="toolbar"]) #navigator-toolbox[slimStyle="compact"] #b
 	margin: 0;
 }
 
-/* appropriating this bit of code to also style the nav-bar in popup windows */
+/* appropriating this bit of code to also style the mini bar and the nav-bar in popup windows */
 window[chromehidden~="toolbar"] #nav-bar .toolbarbutton-1:not(#back-button):not(#forward-button),
-#navigator-toolbox[slimStyle="compact"] #nav-bar .toolbarbutton-1:not(#back-button):not(#forward-button) {
+#navigator-toolbox[slimStyle="compact"] #nav-bar .toolbarbutton-1:not(#back-button):not(#forward-button),
+#theFoxOnlyBetter-slimChrome-container[onlyURLBar]:not([hover]) #nav-bar .toolbarbutton-1:not(#back-button):not(#forward-button) {
 	margin: 0 2px;
 }
 
